--- a/backend/package.json
+++ b/backend/package.json
@@ -23,5 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
     "nodemailer": "^6.9.15"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
